refactor: fix some review comments